Version 1.0.37 (Build 2023101200)
- fixed issue with locked text area when editing existing transcript prior to recording

Version 1.0.36 (Build 2023092700)
- add speed fields for TTS
- added a separate Model Answer field for relevance
- added ability to hide and show grammar/spelling check
- added text analysis features for more languages

Version 1.0.35 (Build 2023092600)
- fix for incorrect language-locale for Norwegian

Version 1.0.34 (Build 2023072402)
- fix for activity description on < M4.0 versions Moodle

Version 1.0.33 (Build 2023072401)
- bug fix for events restoring

Version 1.0.32 (Build 2023072400)
- added attempt submitted and step submitted events

Version 1.0.31 (Build 2023061402)
 - fixed issue when duplicate target words were used
 - preserve case and punctuation in text sent for spellcheck

Version 1.0.30 (Build 2023061401)
 - targetwords now separated by commas or new lines

Version 1.0.29 (Build 2023061400)
 - tweaks to  model audio (Slowed it down)
 - failsafes for when audio or transcript is submitted empty
 - stopped lower casing passage before sent for spell check
 - moved audio recorder below prompt

Version 1.0.28 (Build 2023060800)
 - New UI 

Version 1.0.27 (Build 2023051300)
 -fixed no null definitions that could break restore for certain DB fields
 - added WPM field
 - added preload transcript feature
 - internal refactoring

Version 1.0.23 (Build 2022122000)
- added ideacount and cefr level and relevance and Grammar Suggestions to grading attributes
- added no pasting option for preventing students pasting in a transcript
- cleaned up target words so it uses new lines AND commas and ignored blanks
- Set default report view size to 50

Version 1.0.23 (Build 2022100900)
- added localposturl support for using moodle server as proxy for cloud poodll (only for very special cases)

Version 1.0.22 (Build 2022100700)
- removed unneeded lang strings

Version 1.0.21 (Build 2022072100)