@@ -254,100 +254,7 @@ class attempt_renderer extends \plugin_renderer_base {
         return $this->output->render_from_template( constants::M_COMPONENT . '/summarymyreports', $data);
     }
 
-	/**
-	 * Return the html table of attempts
-	 * @param array homework objects
-	 * @param integer $courseid
-	 * @return string html of table
-	 */
-	function show_attempts_list($attempts,$tableid,$cm){
-	    global $DB;
 
-
-		if(!$attempts){
-			return $this->output->heading(get_string('noattempts',constants::M_COMPONENT), 3, 'main');
-		}
-
-		$table = new \html_table();
-		$table->id = $tableid;
-
-
-		$table->head = array(
-            get_string('timemodified', constants::M_COMPONENT),
-            get_string('users', constants::M_COMPONENT),
-			get_string('actions', constants::M_COMPONENT),
-            ''
-		);
-		$table->headspan = array(1,1,1);
-		$table->colclasses = array(
-                'timemodified', 'actions','actions'
-		);
-
-		//loop through the attempts and add to table
-        $currentattempt=0;
-		foreach ($attempts as $attempt) {
-            $currentattempt++;
-            $row = new \html_table_row();
-
-            //modify date
-            $datecell_content = date("Y-m-d H:i:s",$attempt->timemodified);
-            $attemptdatecell = new \html_table_cell($datecell_content);
-
-
-            //attempt edit
-            $actionurl = constants::M_URL . '/attempt/manageattempts.php';
-
-            //attempt part (stages) links
-            $parts = array();
-
-            $itemtitle = get_string('attempt_partone', constants::M_COMPONENT);
-            if($attempt->completedsteps >= constants::STEP_NONE) {
-                $editurl = new \moodle_url($actionurl,
-                        array('id' => $cm->id, 'attemptid' => $attempt->id, 'type' => constants::STEP_PREPARE));
-                $edituserselections = \html_writer::link($editurl, $itemtitle);
-                $parts[] = $edituserselections;
-            }else{
-                $parts[] = $itemtitle;
-            }
-
-            $itemtitle = get_string('attempt_parttwo', constants::M_COMPONENT);
-            if($attempt->completedsteps >= constants::STEP_PREPARE) {
-                $editurl = new \moodle_url($actionurl,
-                        array('id' => $cm->id, 'attemptid' => $attempt->id, 'type' => constants::STEP_MEDIARECORDING));
-                $editaudio = \html_writer::link($editurl,$itemtitle);
-                $parts[] = $editaudio;
-            }else{
-                $parts[] = $itemtitle;
-            }
-
-            $itemtitle = get_string('attempt_partthree', constants::M_COMPONENT);
-            if($attempt->completedsteps >= constants::STEP_MEDIARECORDING) {
-                    $editurl = new \moodle_url($actionurl,
-                            array('id' => $cm->id, 'attemptid' => $attempt->id, 'type' => constants::STEP_SELFTRANSCRIBE));
-                    $edittranscript = \html_writer::link($editurl, $itemtitle);
-                    $parts[] = $edittranscript;
-            }else{
-                $parts[] = $itemtitle;
-            }
-
-
-
-            $editcell = new \html_table_cell(implode('<br />', $parts));
-
-		    //attempt delete
-			$deleteurl = new \moodle_url($actionurl, array('id'=>$cm->id,'attemptid'=>$attempt->id,'action'=>'confirmdelete'));
-			$deletelink = \html_writer::link($deleteurl, get_string('deleteattempt', constants::M_COMPONENT));
-			$deletecell = new \html_table_cell($deletelink);
-
-			$row->cells = array(
-                    $attemptdatecell, $editcell, $deletecell
-			);
-			$table->data[] = $row;
-		}
-
-		return \html_writer::table($table);
-
-	}
 
     function setup_datatables($tableid){
         global $USER;
